Seperated Grid component

--- a/EmployeeManagementSystem/emsfrontend/src/App.css
+++ b/EmployeeManagementSystem/emsfrontend/src/App.css
@@ -37,6 +37,10 @@
 .MuiDataGrid-root .MuiDataGrid-window {
   overflow-x: hidden !important;
 }
+.gridOperations {
+  display: flex;
+  justify-content: space-between;
+}
 
 @keyframes App-logo-spin {
   from {
