--- a/EmployeeManagementSystem/emsfrontend/src/App.css
+++ b/EmployeeManagementSystem/emsfrontend/src/App.css
@@ -1,7 +1,10 @@
 .App {
   text-align: center;
 }
-
+.test {
+  display: flex;
+  justify-content: flex-end;
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
